force-app/main/default/objects/TriggerConfiguration__mdt/fields/ByPassedProfiles__c.field-meta.xml
<CustomField>
    <fullName>ByPassedProfiles__c</fullName>
    <label>By Passed Profiles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>