force-app/main/default/objects/TriggerConfiguration__mdt/fields/ByPassedUsers__c.field-meta.xml
<CustomField>
    <fullName>ByPassedUsers__c</fullName>
    <label>By Passed Users</label>
    <length>255</length>
    <type>Text</type>
</CustomField>