force-app/main/default/objects/TriggerConfiguration__mdt/fields/MaxCount__c.field-meta.xml
<CustomField>
    <fullName>MaxCount__c</fullName>
    <label>Max Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>