force-app/main/default/objects/TriggerConfiguration__mdt/fields/ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ObjectApiName__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Object Api Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>