force-app/main/default/objects/TriggerConfiguration__mdt/listViews/TriggerConfigurations.listView-meta.xml
<ListView>
    <fullName>TriggerConfigurations</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>BeforeInsert__c</columns>
    <columns>AfterInsert__c</columns>
    <columns>BeforeUpdate__c</columns>
    <columns>AfterUpdate__c</columns>
    <columns>BeforeDelete__c</columns>
    <columns>AfterDelete__c</columns>
    <columns>AfterUndelete__c</columns>
    <columns>MaxCount__c</columns>
    <columns>ByPassedUsers__c</columns>
    <columns>ByPassedProfiles__c</columns>
    <filterScope>Everything</filterScope>
    <label>Trigger Configurations</label>
</ListView>